--- a/WishList/Views/Item/Index.cshtml
+++ b/WishList/Views/Item/Index.cshtml
@@ -6,6 +6,9 @@
 <ul>
      @foreach (var item in Model)
      {
-         <li>@item.Id-@item.Description <a asp-action="Delete" asp-route-id="@item.Id">Delete</a></li>
+         <li>@item.Id-@item.Description 
+             <a asp-action="Edit" asp-route-id="@item.Id">Edit</a>
+             <a asp-action="Delete" asp-route-id="@item.Id">Delete</a>
+             </li>
      }
 </ul>
